# vault-keepassxc-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/vault_keepassxc_client/: cli.py
tests/: test_cli.py
