[project]
name = "vault-keepassxc-client"
version = "0.0.1"
description = "Read Ansible Vault passwords from KeePassXC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible-core>=2.14.0",
]

[project.scripts]
vault-keepassxc-client = "vault_keepassxc_client.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff.lint]
extend-select = ["B", "Q"]
