[project]
name = "vault-keepassxc-client"
version = "0.0.1"
description = "Read Ansible Vault passwords from KeePassXC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible-core>=2.14.0",
]

[project.scripts]
vault-keepassxc-client = "vault_keepassxc_client.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/vault_keepassxc_client", "docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/vault_keepassxc_client"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.0",
]

[tool.ruff.lint]
extend-select = ["B", "Q"]

[tool.mypy]
exclude = ['.venv', 'venv']
pretty = true
strict = true

[[tool.mypy.overrides]]
module = [
    "ansible.config",
    "ansible.module_utils.common",
]
ignore_missing_imports = true

# vim: set sw=4 sts=4 et :
